version/0.40/_sources/api/solver/_autosummary/settings/interface.rst.txt
:orphan:

.. _interface:

interface
=========

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.interface
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`create <create_6>`                                           Crate new boundary.

:ref:`delete <delete>`                                        Delete selected objects.

:ref:`rename <rename>`                                              Rename the object.

:ref:`list <list_1>`                                    List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`interface_child <interface_child>`


.. rubric:: Included in:

==============================   ===================================================

Parent                                                                       Summary

==============================   ===================================================
:ref:`boundaries <boundaries>`       Defines physics boundaries for a volume region.

==============================   ===================================================

